plugins {
	id "java-library"
	id "maven-publish"
	id "idea"
	id "eclipse"
	id "net.neoforged.moddev" version "$version_mdg"
}

tasks.named("wrapper", Wrapper).configure {
	// Define wrapper values here so as to not have to always do so when updating gradlew.properties.
	// Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
	// documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
	// file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
	// (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
	distributionType = Wrapper.DistributionType.BIN
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

version = mod_version
group = mod_group

base {
	archivesName = "ImmersivePetroleum-"+version_minecraft
}

sourceSets {
	main {
		resources.srcDirs = ["$rootDir/src/main/resources", "$rootDir/src/generated/resources"]
	}
	datagen {
		compileClasspath += main.compileClasspath
		runtimeClasspath += main.runtimeClasspath
		compileClasspath += main.output
		runtimeClasspath += main.output
	}
}

neoForge {
	version = project.version_neo
	
	/*
	parchment {
		minecraftVersion = project.version_minecraft
		mappingsVersion = project.version_parchment
	}
	*/
	
	accessTransformers = project.files("src/main/resources/META-INF/accesstransformer.cfg")
	
	runs {
		configureEach {
			systemProperty "forge.logging.markers", "REGISTRIES"

			logLevel = org.slf4j.event.Level.INFO
		}
		
		client {
			client()
		}
		
		server {
			server()
			programArgument "--nogui"
		}
		
		data {
			data()
			sourceSet = sourceSets.datagen
			programArguments = [
					"--mod", "${mod_id}",
					"--all",
					"--output", file("src/generated/resources/").toString(),
					"--validate",
					"--existing", sourceSets.main.resources.srcDirs[0].toString(),
					"--existing-mod", "immersiveengineering"
			]
		}
	}
	
	mods {
		"${mod_id}" {
			sourceSet sourceSets.main
			sourceSet sourceSets.datagen
		}
	}
}

configurations {
	runtimeClasspath.extendsFrom localRuntime
}

repositories {
	maven {	name = "BlameJared";	url = "https://maven.blamejared.com/" }			// IE & CrT Files
	maven { name = "DVS1 Maven FS"; url = "https://dvs1.progwml6.com/files/maven" }	// JEI & Tinkers Files
	maven { name = "CurseMaven";	url = 'https://cfa2.cursemaven.com' }			// Needed for PNC
	maven { // CC-Tweaked
		url "https://squiddev.cc/maven/"
		content {
			includeGroup("cc.tweaked")
		}
	}

	flatDir { dirs 'flatdir' }
}

dependencies {
	implementation "blusunrize.immersiveengineering:ImmersiveEngineering:${version_ie}"
	datagenImplementation "blusunrize.immersiveengineering:ImmersiveEngineering:${version_ie}:datagen"
	
	localRuntime "mezz.jei:jei-${version_minecraft}-neoforge:${version_jei}"
	compileOnly "mezz.jei:jei-${version_minecraft}-neoforge-api:${version_jei}"
	compileOnly "mezz.jei:jei-${version_minecraft}-common-api:${version_jei}"

	jarJar(implementation("malte0811:DualCodecs")) {
		version {
			strictly "[${version_dualcodecs},1)"
			prefer "${version_dualcodecs}"
		}
	}
	
	// Example optional mod dependency with JEI
	// The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
	// compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
	// compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
	// We add the full version to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
	// localRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"
	
	// For more info:
	// http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
	// http://www.gradle.org/docs/current/userguide/dependency_management.html
}

def version_replaces = [
	'ip_version'	: mod_version,
	'mc_version'	: version_minecraft,
	'neo_version'	: version_neo,
	'ie_version'	: version_ie,
]
processResources {
	filesMatching("META-INF/mods.toml") {
		expand version_replaces
	}
}

publishing {
	publications {
		register("mavenJava", MavenPublication) {
			from components.java
		}
	}
	repositories {
		maven {
			url "file://${project.projectDir}/repo"
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8" // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}
